data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_249.wast
;; 10. **Test 10: Loop with `nop` and Invalid Condition**:     - **Description**: A loop with intentionally invalid conditions meant to exit the loop, testing robustness against `nop` instructions.     - **Constraint**: Ensures `nop` does not affect error handling or loop control logic.     - **Relation to Infinite Loops**: Validates that such conditions (combined with `nop`) are handled gracefully without leading to infinite loops.     - **Example**: `(loop $L (nop) (br_if $L (i32.eqz (i32.const 0))) (unreachable))`

(assert_invalid 
  (module 
    (func $test 
      (loop $L 
        (nop) 
        (br_if $L 
          (i32.eqz 
            (i32.const 0)
          )
        ) 
        (unreachable)
      )
    )
  ) 
  "unreachable"
)